<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="onoff">LED ON/OFF</string>
    
    <string name="app_name">WiDrive</string>
    <string name="menu_settings">Settings</string>
	<string name="button_server_activity">Car</string>
	<string name="button_client_activity">Remote</string>
	<string name="title">Welcome to Wi-Drive.</string>
	<string name="welcome_message">Please select which function you would like this phone to perform.</string>
	
	<string name="button_pair">Pair</string>
	<string name="button_start">Start</string>
	
	<string name="car_title">This is the Car Interface.</string>
	<string name="car_description">Select Pair to connect to the remote, or Start to begin the video stream.</string>
	
	<string name="remote_title">This is the Remote Interface.</string>
	<string name="remote_description">Select Pair to connect to the car, or Start to view the video stream.</string>
	<string name="select_peers">Please select the device you would like to connect to from the list of devices below.</string>
	
	<string name="enable_wifi">WiFi Direct is required to perform this operation. Would you like to enable it now?</string>
	
	<string name="disconnect">Disconnect</string>
	<string name="connection_on">Connected to </string>
	<string name="connection_off">Unconnected</string>
	
</resources>