<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RemoteActivity" >

    <TextView
        android:id="@+id/remote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/remote_title"
        android:textColor="#FFFFFF"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/remote_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/remote_title"
        android:layout_marginTop="21dp"
        android:text="@string/remote_description"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_client_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/remote_description"
        android:layout_marginTop="78dp"
        android:background="@drawable/button_client_custom"
        android:onClick="pair"
        android:text="@string/button_pair" />

    <Button
        android:id="@+id/button_client_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_client_pair"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_client_pair"
        android:layout_marginTop="34dp"
        android:background="@drawable/button_server_custom"
        android:onClick="start"
        android:text="@string/button_start" />

</RelativeLayout>