<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="21dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_server_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/description"
        android:layout_marginTop="78dp"
        android:background="@drawable/button_client_custom"
        android:onClick="pair"
        android:text="@string/button_pair" />

    <Button
        android:id="@+id/button_server_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_server_pair"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_server_pair"
        android:layout_marginTop="34dp"
        android:background="@drawable/button_server_custom"
        android:onClick="start"
        android:text="@string/button_start" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/disconnect"
        android:layout_toLeftOf="@+id/disconnect"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/connection_off"
        android:textColor="#f00"
        android:textSize="22sp" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/disconnect"
        android:onClick="disconnect"
        android:visibility="invisible" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:id="@+id/status_text">
        </TextView>

</RelativeLayout>